Fresh auth service implementation. We had to go bald